--- a/PersistentStorage.CachedJson/PersistentStorage.CachedJson.csproj
+++ b/PersistentStorage.CachedJson/PersistentStorage.CachedJson.csproj
@@ -2,13 +2,13 @@
 
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
-    <PackageRequireLicenseAcceptance>false</PackageRequireLicenseAcceptance>
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
     <Authors>jtsshieh</Authors>
-    <PackageId>Garamia.PersistentStorage.CachedJson</PackageId>
     <PackageLicenseExpression>MIT</PackageLicenseExpression>
+	<PackageId>Garamia.PersistentStorage.CachedJson</PackageId>
+	<RootNamespace>PersistentStorage.CachedJson</RootNamespace>
     <AssemblyName>PersistentStorage.CachedJson</AssemblyName>
-    <RootNamespace>PersistentStorage.CachedJson</RootNamespace>
+    <Version>1.0.0</Version>
   </PropertyGroup>
 
   <ItemGroup>
