--- a/PersistentStorage.CachedJson/PersistentStorage.CachedJson.csproj
+++ b/PersistentStorage.CachedJson/PersistentStorage.CachedJson.csproj
@@ -9,6 +9,7 @@
 	<RootNamespace>PersistentStorage.CachedJson</RootNamespace>
     <AssemblyName>PersistentStorage.CachedJson</AssemblyName>
     <Version>1.0.0</Version>
+    <RepositoryUrl>https://github.com/jtsshieh/PersistentStorage.CachedJson</RepositoryUrl>
   </PropertyGroup>
 
   <ItemGroup>
